tests/testcases/valid/control_flow/06_switch_mixed.ciel
// Switch with various densities

int main() {
    int x = 5;
    int result = 0;

    // Dense cases - should use jump table
    switch (x) {
        case 0: {
            result = 0;
            break;
        }
        case 1: {
            result = 1;
            break;
        }
        case 2: {
            result = 2;
            break;
        }
        case 7: {
            result = 7;
        }
        case 3: {
            result = 3;
            break;
        }
        case 4: {
            result = 4;
            break;
        }
        case 5: {
            result = 5;
            break;
        }
        case 8: {
            result = 8;
            break;
        }
        case 10: {
            result = 10;
            break;
        }
        default: {
            result = -1;
            break;
        }
    }

    // Few cases - should use if-else
    int y = 2;
    switch (y) {
        case 1: {
            result = 100;
            break;
        }
        case 2: {
            result = 200;
            break;
        }
    }

    return 0;
}
