tests/testcases/invalid/semantic/32_missing_return_switch_no_default.ciel
// Error: control may reach end of non-void function (switch without default)
int classify(int x) {
    switch (x) {
        case 1:
            return 100;
        case 2:
            return 200;
        // Error: no default case - what if x is 3?
    }
}

int main() {
    int result = classify(3);
    return 0;
}
